--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 		<h1>.</h1>
 			<p><a href=".">.</a>
 
-<br>				   ├─ [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;0&nbsp;Mar&nbsp;12&nbsp;15:01]&nbsp;&nbsp;<a href="./modern_living_room/">modern_living_room</a><br>				   ├─ [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1066&nbsp;Mar&nbsp;12&nbsp;14:52]&nbsp;&nbsp;<a href="./LICENSE">LICENSE</a>
+<br>				   ├─ [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;0&nbsp;Mar&nbsp;12&nbsp;15:01]&nbsp;&nbsp;<a href="./modern_living_room/">modern_living_room</a><br>				   ├─ [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;0&nbsp;Mar&nbsp;12&nbsp;15:29]&nbsp;&nbsp;<a href="./pine_forest/">pine_forest</a><br>				   ├─ [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1066&nbsp;Mar&nbsp;12&nbsp;14:52]&nbsp;&nbsp;<a href="./LICENSE">LICENSE</a>
 <br>				   ├─ [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;6&nbsp;Mar&nbsp;12&nbsp;14:52]&nbsp;&nbsp;<a href="./README.md">README.md</a>
-<br>				   ├─ [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;67&nbsp;Mar&nbsp;12&nbsp;15:02]&nbsp;&nbsp;<a href="./gltf.json">gltf.json</a>
+<br>				   ├─ [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;96&nbsp;Mar&nbsp;12&nbsp;15:29]&nbsp;&nbsp;<a href="./gltf.json">gltf.json</a>
 <br>				   └─ [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;132&nbsp;Mar&nbsp;12&nbsp;15:05]&nbsp;&nbsp;<a href="./push.sh">push.sh</a>
 		<br><br>
 		</p>
